# chefai-backend

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  recipe_app_detailed_architecture (1).excalidraw  recipe_app_user_flow.excalidraw  requirements.txt
docs/diagrams/: constraints-reranking-flow.excalidraw  ingestion-indexing-flow.excalidraw  search-request-flow.excalidraw  system-architecture.excalidraw
scripts/: ingest_recipes.py
src/: config.py  db.py  ed.py  embedd.py  embedder.py  main.py  model.py  preprocess.py  python_to_sql.py  search.py
src/chefai/: __init__.py  main.py
src/chefai/api/routes/: recipes.py
src/chefai/api/schemas/: recipe.py  search.py
src/chefai/core/: config.py
src/chefai/data/: ingest.py  models.py
src/chefai/repositories/: __init__.py  qdrant_repository.py
src/chefai/services/: constraint_service.py  embedding_service.py  rerank_service.py  search_service.py  types.py
tests/: test_constraints.py  test_search_schema.py
